--- a/public/404.html
+++ b/public/404.html
@@ -5,17 +5,17 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="robots" content="index, follow">
-<title>404 Page not found | Brian Ardiles - Blog</title>
+<title>404 Page not found | Brian Ardiles</title>
 <meta name="keywords" content="">
 <meta name="description" content="">
 <meta name="author" content="">
-<link rel="canonical" href="https://blog.brianardiles.com/404.html">
-<link crossorigin="anonymous" href="/assets/css/stylesheet.3613efbd0b1772781e8f49935e973cae632a7f61471c05b17be155505ccf87b5.css" integrity="sha256-NhPvvQsXcngej0mTXpc8rmMqf2FHHAWxe&#43;FVUFzPh7U=" rel="preload stylesheet" as="style">
-<link rel="icon" href="https://blog.brianardiles.com/favicon.ico">
-<link rel="icon" type="image/png" sizes="16x16" href="https://blog.brianardiles.com/favicon-16x16.png">
-<link rel="icon" type="image/png" sizes="32x32" href="https://blog.brianardiles.com/favicon-32x32.png">
-<link rel="apple-touch-icon" href="https://blog.brianardiles.com/apple-touch-icon.png">
-<link rel="mask-icon" href="https://blog.brianardiles.com/safari-pinned-tab.svg">
+<link rel="canonical" href="brianardiles.com/404.html">
+<link crossorigin="anonymous" href="/brianardiles.com/assets/css/stylesheet.3613efbd0b1772781e8f49935e973cae632a7f61471c05b17be155505ccf87b5.css" integrity="sha256-NhPvvQsXcngej0mTXpc8rmMqf2FHHAWxe&#43;FVUFzPh7U=" rel="preload stylesheet" as="style">
+<link rel="icon" href="brianardiles.com/favicon.ico">
+<link rel="icon" type="image/png" sizes="16x16" href="brianardiles.com/favicon-16x16.png">
+<link rel="icon" type="image/png" sizes="32x32" href="brianardiles.com/favicon-32x32.png">
+<link rel="apple-touch-icon" href="brianardiles.com/apple-touch-icon.png">
+<link rel="mask-icon" href="brianardiles.com/safari-pinned-tab.svg">
 <meta name="theme-color" content="#2e2e33">
 <meta name="msapplication-TileColor" content="#2e2e33">
 <noscript>
@@ -29,7 +29,7 @@
 </noscript><meta property="og:title" content="404 Page not found" />
 <meta property="og:description" content="" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://blog.brianardiles.com/404.html" />
+<meta property="og:url" content="brianardiles.com/404.html" />
 
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="404 Page not found"/>
@@ -42,7 +42,7 @@
 <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="https://blog.brianardiles.com" accesskey="h" title="Brian Ardiles - Blog (Alt + H)">Brian Ardiles - Blog</a>
+            <a href="brianardiles.com" accesskey="h" title="Brian Ardiles (Alt + H)">Brian Ardiles</a>
             <div class="logo-switches">
             </div>
         </div>
@@ -55,7 +55,7 @@
     </main>
     
 <footer class="footer">
-    <span>&copy; 2023 <a href="https://blog.brianardiles.com">Brian Ardiles - Blog</a></span>
+    <span>&copy; 2023 <a href="brianardiles.com">Brian Ardiles</a></span>
     <span>
         Powered by
         <a href="https://gohugo.io/" rel="noopener noreferrer" target="_blank">Hugo</a> &
