--- a/public/index.html
+++ b/public/index.html
@@ -67,7 +67,7 @@
 </header>
 <main class="main"><div class="profile">
     <div class="profile_inner">
-        <img draggable="false" src="https://i.imgur.com/EPJVDbC.jpeg" alt="profile photo" title="profile photo"
+        <img draggable="false" src="brianardiles.com/posts/images/profile.jpeg" alt="profile photo" title="profile photo"
             height="170" width="170" />
         <h1>Hi 👋🏼 I&rsquo;m Brian Ardiles 🧑🏽‍💻</h1>
         <span>Backend dev turned tech lead. Problem solver, tech enthusiast, always learning.</span><div class="social-icons">
