--- a/public/404.html
+++ b/public/404.html
@@ -3,18 +3,6 @@
 
 <head><meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-58G9S28896"></script>
-<script>
-var doNotTrack = false;
-if (!doNotTrack) {
-	window.dataLayer = window.dataLayer || [];
-	function gtag(){dataLayer.push(arguments);}
-	gtag('js', new Date());
-	gtag('config', 'G-58G9S28896', { 'anonymize_ip': false });
-}
-</script>
-
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="robots" content="index, follow">
 <title>404 Page not found | Brian Ardiles</title>
@@ -38,18 +26,7 @@ if (!doNotTrack) {
         }
 
     </style>
-</noscript>
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-58G9S28896"></script>
-<script>
-var doNotTrack = false;
-if (!doNotTrack) {
-	window.dataLayer = window.dataLayer || [];
-	function gtag(){dataLayer.push(arguments);}
-	gtag('js', new Date());
-	gtag('config', 'G-58G9S28896', { 'anonymize_ip': false });
-}
-</script>
-<meta property="og:title" content="404 Page not found" />
+</noscript><meta property="og:title" content="404 Page not found" />
 <meta property="og:description" content="" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="brianardiles.com/404.html" />
