add script plausible to header

--- a/public/search/index.html
+++ b/public/search/index.html
@@ -27,7 +27,8 @@
         }
 
     </style>
-</noscript><meta property="og:title" content="Search" />
+</noscript><script defer data-domain="brianardiles.com" src="https://plausible.io/js/script.js"></script>
+<meta property="og:title" content="Search" />
 <meta property="og:description" content="search" />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="brianardiles.com/search/" /><meta property="article:section" content="" />
