--- a/public/404.html
+++ b/public/404.html
@@ -26,7 +26,8 @@
         }
 
     </style>
-</noscript><meta property="og:title" content="404 Page not found" />
+</noscript><script defer data-domain="brianardiles.com" src="https://plausible.io/js/script.js"></script>
+<meta property="og:title" content="404 Page not found" />
 <meta property="og:description" content="" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="brianardiles.com/404.html" />
