--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,8 @@
         }
 
     </style>
-</noscript><meta property="og:title" content="Brian Ardiles" />
+</noscript><script defer data-domain="brianardiles.com" src="https://plausible.io/js/script.js"></script>
+<meta property="og:title" content="Brian Ardiles" />
 <meta property="og:description" content="" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="brianardiles.com/" />
